package cn.tunyl.interfacesegregation;

public interface AntiTheft {
    void antiTheft();
}
