package cn.tunyl.interfacesegregation;

public interface Fireproof {
    void fireproof();
}
