package cn.tunyl.interfacesegregation;

public interface Waterproof {
    void waterproof();
}
